# PyIsolate

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CHANGELOG.md  Dockerfile  LICENSE  POLICY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: automatic-bounds-checking.md  compatibility-matrix.md  execution-model.md  kubernetes.md  packaging-reproducibility.md  protocol.md  subset.md  threat-model.md
examples/: echo.py  metrics.py
policy/: web_scraper.yml
pqcrypto/: __init__.py
pqcrypto/kem/: __init__.py  kyber768.py
pyisolate/: __init__.py  capabilities.py  cgroup.py  checkpoint.py  cli.py  conformance.py  doctor.py  editor.py  errors.py  libsodium.py  logging.py  migration.py  nogil.py  numa.py  provenance.py  recovery.py  sdk.py  subset.py  supervisor.py  telemetry.py  watchdog.py
pyisolate/bpf/: __init__.py  contract.py  dummy.bpf.c  fs_filter.bpf.c  manager.py  resource_guard.bpf.c  syscall_filter.bpf.c
pyisolate/broker/: __init__.py  channel.py  crypto.py  uring.py
pyisolate/observability/: alerts.py  metrics.py  trace.py
pyisolate/operator/: __init__.py
pyisolate/policy/: __init__.py  compiler.py  model.py
pyisolate/policy/templates/: ml-inference.yml  ml.yml  readonly-fs.yml  stdlib.readonly.yml
pyisolate/runtime/: child.py  confine.py  imports.py  landlock.py  microvm.py  process_backend.py  protocol.py  thread.py
scripts/: benchmark.py  coverage_badge.py  pylint_badge.py
tests/: conftest.py  helper_module.py  test_alerts.py  test_benchmark.py  test_bpf_kernel_enforcement.py  test_bpf_manager.py  test_bpf_manager_extra.py  test_capabilities.py  test_cgroup.py  test_checkpoint.py  test_cli.py  test_conformance.py  test_crypto.py  test_crypto_extra.py  test_crypto_kyber.py  test_debugging.py  test_ebpf_contract.py  test_editor.py  test_fuzz.py  test_hostile_workloads.py  test_idle_thread.py  test_integration.py  test_landlock.py  test_logging.py  test_matrix_hardening.py  test_metrics.py  test_microvm.py  test_microvm_launcher.py  test_migration.py  test_network.py  test_nogil.py  test_numa.py  test_operator.py  test_performance.py  test_policy.py  test_policy_enforcement.py  test_process_backend.py  test_process_confinement.py  test_protocol_plane.py  test_provenance.py  (+16 more)
tests/hostile_workloads/: __init__.py  corpus.py
