[project]
name = "pyisolate"
version = "0.0.1"
description = "Minimal skeleton for PyIsolate sandbox"
authors = [{ name = "PyIsolate" }]
requires-python = ">=3.11"
dependencies = ["pyyaml", "cryptography"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyisolate"]

[project.optional-dependencies]
pqcrypto = ["pqcrypto"]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "flake8",
    "pylint",
    "isort",
    "mypy",
    "coverage",
    "coverage-badge",
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
