[project]
name = "pyisolate"
version = "0.0.1"
description = "Prototype PyIsolate sandbox; kernel enforcement and no-GIL support are experimental roadmap items"
authors = [{ name = "PyIsolate" }]
requires-python = ">=3.11"
dependencies = ["pyyaml", "cryptography"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyisolate", "pyisolate.*"]


[tool.setuptools.package-data]
"pyisolate.policy.templates" = ["*.yml"]
"pyisolate.bpf" = ["*.bpf.c"]

[project.scripts]
pyisolate = "pyisolate.cli:main"
pyisolate-doctor = "pyisolate.doctor:main"

[project.optional-dependencies]
pqcrypto = ["pqcrypto"]
release = [
    "build",
    "twine",
    "sigstore",
]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "coverage",
    "coverage-badge",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true


[tool.pylint.main]
# pylint is tracked as a quality badge (see scripts/pylint_badge.py) rather than
# requiring a perfect score.  fail-under keeps the CI hook from blocking on the
# project's accepted level of style/refactor findings while still surfacing them.
fail-under = 8.0


[tool.pytest.ini_options]
markers = [
    "adversarial: adversarial input and exploit-style behavior",
    "runaway_cpu: CPU quota and runaway loop enforcement",
    "memory_exhaustion: memory pressure and exhaustion scenarios",
    "import_escape: module import escape attempts",
    "policy_bypass: file/network policy bypass attempts",
    "race: high-concurrency race scenarios",
    "no_gil: experimental free-threaded/no-GIL roadmap scenarios",
    "soak: long-running spawn/kill stability coverage",
    "crash_injection: injected crash/fault-recovery scenarios",
    "cross_kernel: kernel-version compatibility scenarios",
]

[tool.isort]
profile = "black"
