[project]
name = "pyisolate"
version = "0.0.1"
description = "Prototype PyIsolate sandbox; kernel enforcement and no-GIL support are experimental roadmap items"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "PyIsolate" }]
requires-python = ">=3.11"
keywords = [
    "sandbox",
    "isolation",
    "security",
    "seccomp",
    "landlock",
    "ebpf",
    "sub-interpreter",
    "no-gil",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = ["pyyaml", "cryptography", "platformdirs"]

[project.urls]
Homepage = "https://github.com/seanwevans/pyisolate"
Repository = "https://github.com/seanwevans/pyisolate"
Issues = "https://github.com/seanwevans/pyisolate/issues"
Changelog = "https://github.com/seanwevans/pyisolate/blob/main/ROADMAP.md"

[build-system]
# setuptools >= 77 emits PEP 639 license metadata (License-Expression /
# License-File) that twine check and modern PyPI validate cleanly.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyisolate", "pyisolate.*"]


[tool.setuptools.package-data]
"pyisolate.policy.templates" = ["*.yml"]
"pyisolate.bpf" = ["*.bpf.c"]

[project.scripts]
pyisolate = "pyisolate.cli:main"
pyisolate-doctor = "pyisolate.doctor:main"

[project.optional-dependencies]
pqcrypto = ["pqcrypto"]
operator = ["kubernetes"]
release = [
    "build",
    "twine",
    "sigstore",
]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "coverage",
    "coverage-badge",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true


[tool.pylint.main]
# pylint is tracked as a quality badge (see scripts/pylint_badge.py) rather than
# requiring a perfect score.  fail-under keeps the CI hook from blocking on the
# project's accepted level of style/refactor findings while still surfacing them.
fail-under = 8.0


[tool.pytest.ini_options]
markers = [
    "adversarial: adversarial input and exploit-style behavior",
    "runaway_cpu: CPU quota and runaway loop enforcement",
    "memory_exhaustion: memory pressure and exhaustion scenarios",
    "import_escape: module import escape attempts",
    "policy_bypass: file/network policy bypass attempts",
    "race: high-concurrency race scenarios",
    "no_gil: experimental free-threaded/no-GIL roadmap scenarios",
    "soak: long-running spawn/kill stability coverage",
    "crash_injection: injected crash/fault-recovery scenarios",
    "cross_kernel: kernel-version compatibility scenarios",
]

[tool.isort]
profile = "black"
